Revise index.html for New Year greeting update
Updated the HTML structure and content for a New Year greeting page, including changes to the hero section, benefits, and booking card.

--- a/index.html
+++ b/index.html
@@ -2,64 +2,74 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Дед Мороз и Снегурочка — Новогоднее поздравление</title>
+  <title>Дед Мороз и Снегурочка — Новогоднее чудо</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header class="hero">
-  <h1>🎄 Новогоднее поздравление от Деда Мороза и Снегурочки</h1>
-  <p>Прямо у вас дома — в удобное время</p>
-  <button onclick="openBooking()">Забронировать</button>
-</header>
-
-<section class="features">
-  <div>✔ Именное поздравление</div>
-  <div>✔ Игры и стихи</div>
-  <div>✔ Вручение подарка</div>
-  <div>✔ Фото на память</div>
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-overlay">
+    <h1>Новогоднее чудо у вас дома 🎄</h1>
+    <p>Настоящий Дед Мороз и Снегурочка — в удобное время</p>
+    <button class="primary" onclick="startBooking()">Забронировать</button>
+  </div>
 </section>
 
-<section id="booking" class="booking hidden">
+<!-- BENEFITS -->
+<section class="benefits">
+  <div>🎅 Настоящие костюмы</div>
+  <div>❄️ Именное поздравление</div>
+  <div>📸 Фото на память</div>
+</section>
+
+<!-- BOOKING CARD -->
+<section class="card hidden" id="bookingCard">
+
   <h2>Бронирование</h2>
 
-  <label>Дата</label>
-  <input type="date" id="date">
+  <div class="step">
+    <label>Дата</label>
+    <input type="date" id="date">
+  </div>
 
-  <label>Время</label>
-  <select id="time">
-    <option>10:00</option>
-    <option>11:00</option>
-    <option>12:00</option>
-    <option>13:00</option>
-    <option>14:00</option>
-    <option>15:00</option>
-    <option>16:00</option>
-    <option>17:00</option>
-    <option>18:00</option>
-  </select>
+  <div class="step">
+    <label>Время</label>
+    <select id="time">
+      <option>12:00</option>
+      <option>13:00</option>
+      <option>14:00</option>
+      <option>15:00</option>
+      <option>16:00</option>
+      <option>17:00</option>
+      <option>18:00</option>
+    </select>
+  </div>
 
-  <label>Адрес</label>
-  <input type="text" id="address" placeholder="Город, улица, дом, квартира">
+  <div class="step">
+    <label>Адрес</label>
+    <input type="text" id="address" placeholder="Улица, дом, квартира">
+  </div>
 
-  <label>Имя родителя</label>
-  <input type="text" id="name">
+  <div class="step inline">
+    <input type="text" id="name" placeholder="Ваше имя">
+    <input type="tel" id="phone" placeholder="Телефон">
+  </div>
 
-  <label>Телефон</label>
-  <input type="tel" id="phone">
+  <div class="step">
+    <input type="text" id="child" placeholder="Имя ребёнка">
+  </div>
 
-  <label>Имя ребёнка</label>
-  <input type="text" id="child">
-
-  <button onclick="confirmBooking()">Подтвердить и оплатить</button>
+  <button class="primary full" onclick="confirmBooking()">Перейти к оплате</button>
 </section>
 
-<section id="payment" class="hidden payment">
+<!-- PAYMENT -->
+<section class="card hidden" id="paymentCard">
   <h2>Оплата</h2>
-  <p>Отсканируйте QR-код для оплаты</p>
-  <img id="qrImage" src="assets/qr.png" alt="QR код">
-  <p>После оплаты мы свяжемся с вами в течение 10 минут</p>
+  <p>Отсканируйте QR-код</p>
+  <img id="qrImage" src="assets/qr.png">
+  <p class="small">После оплаты мы сразу подтвердим бронь</p>
 </section>
 
 <script src="js/app.js"></script>
