--- a/index.html
+++ b/index.html
@@ -8,42 +8,68 @@
 </head>
 <body>
 
+<!-- AUDIO -->
+<audio id="bgSound" loop>
+  <source src="assets/newyear.mp3" type="audio/mpeg">
+</audio>
+
+<!-- SNOW -->
+<canvas id="snow"></canvas>
+
 <section class="hero">
   <div class="overlay">
-    <h1>Новогоднее чудо у вас дома 🎄</h1>
-    <p>Настоящий Дед Мороз и Снегурочка в удобное время</p>
-    <button onclick="startBooking()">Забронировать</button>
+    <h1>Настоящее новогоднее чудо ✨</h1>
+    <p>
+      Дед Мороз и Снегурочка лично поздравят вашего ребёнка  
+      — с теплом, вниманием и настоящими эмоциями
+    </p>
+
+    <div class="trust">
+      ⭐ 200+ семей · 🎄 5 лет опыта · ❤️ Живые эмоции
+    </div>
+
+    <button class="primary" onclick="startBooking()">Забронировать</button>
   </div>
 </section>
 
-<section class="benefits">
-  <span>🎅 Настоящие костюмы</span>
-  <span>❄️ Именное поздравление</span>
-  <span>📸 Фото на память</span>
+<section class="soft-text">
+  Мы приходим не просто поздравить.  
+  Мы создаём момент, который ребёнок запомнит надолго.
 </section>
 
 <section class="card hidden" id="bookingCard">
   <h2>Бронирование</h2>
+
   <input type="date" id="date">
   <select id="time">
+    <option value="">Время</option>
     <option>14:00</option>
     <option>15:00</option>
     <option>16:00</option>
     <option>17:00</option>
   </select>
-  <input type="text" id="address" placeholder="Адрес">
-  <input type="text" id="name" placeholder="Ваше имя">
-  <input type="tel" id="phone" placeholder="Телефон">
+
+  <input type="text" id="address" placeholder="Адрес поздравления">
+
+  <div class="inline">
+    <input type="text" id="name" placeholder="Ваше имя">
+    <input type="tel" id="phone" placeholder="Телефон">
+  </div>
+
   <input type="text" id="child" placeholder="Имя ребёнка">
-  <button onclick="confirmBooking()">К оплате</button>
+
+  <button class="primary full" onclick="confirmBooking()">Перейти к оплате</button>
 </section>
 
 <section class="card hidden" id="paymentCard">
   <h2>Оплата</h2>
   <img src="assets/qr.png" id="qrImage">
-  <p class="small">После оплаты мы подтвердим заказ</p>
+  <p class="small">
+    После оплаты мы сразу подтвердим бронь по телефону
+  </p>
 </section>
 
 <script src="js/app.js"></script>
+<script src="js/snow.js"></script>
 </body>
 </html>
