--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
   Мы создаём момент, который ребёнок запомнит надолго.
 </section>
 
+  <section class="info">
+  <h2>Как проходит поздравление</h2>
+
+  <ul>
+    <li>🎅 Дед Мороз и Снегурочка приходят точно ко времени</li>
+    <li>✨ Обращаются к ребёнку по имени</li>
+    <li>🎁 Проводят мини-игру или квест (по возрасту)</li>
+    <li>💫 Помогают загадать желание</li>
+    <li>📦 Вручают подарок от родителей</li>
+    <li>📸 Делают фото на ваш телефон</li>
+  </ul>
+
+  <p class="note">
+    ⏱ Длительность: 15–20 минут<br>
+    👶 Возраст: от 2 до 10 лет
+  </p>
+</section>
+
 <section class="card hidden" id="bookingCard">
   <h2>Бронирование</h2>
 
@@ -73,3 +91,4 @@
 <script src="js/snow.js"></script>
 </body>
 </html>
+
