--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       — с теплом, вниманием и настоящими эмоциями
     </p>
 
+    <div class="slots" id="slotsInfo">
+  ⏳ Осталось <strong>7</strong> свободных слотов
+</div>
+
     <div class="trust">
       ⭐ 200+ семей · 🎄 5 лет опыта · ❤️ Живые эмоции
     </div>
@@ -91,4 +95,5 @@
 <script src="js/snow.js"></script>
 </body>
 </html>
+
 
