--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Новогоднее поздравление от Деда Мороза</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
 
@@ -95,5 +95,6 @@
 <script src="js/snow.js"></script>
 </body>
 </html>
+
 
 
